# mars

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  HANDOFF_shared_halo_tet_from_matfree_session.md  KNOWN_LIMITATIONS.md  README.md  TGV_BD_VALIDATION.md  TGV_HANDOFF.md  TGV_NEXT_SESSION_HANDOFF.md  base.hpp  benchmark.hpp  bisection.hpp  cmakeScript.sh  communicator.cpp  communicator.hpp  dof_map.hpp  dual_graph.hpp  edge.hpp  edge_element_map.hpp  edge_node_map.hpp  edge_select.hpp  edge_split.hpp  edge_split_pool.hpp  lagrange_element.hpp  longest_edge.hpp  main.cpp  mars.hpp  mars.sublime-project  mars_affine_transformation.hpp  mars_array.hpp  mars_base.hpp  mars_base_elementfunctionspace.hpp  mars_base_entity.hpp  (+132 more)
backend/adios2/: CMakeLists.txt  mars_adios2_IO.cpp  mars_adios2_IO.hpp  mars_example_adios2.cpp  mars_example_adios2.hpp  mars_example_adios_mpi.cpp  mars_example_mpi.cpp  mars_image.hpp  mars_image_adios_writer.hpp  mars_image_data_writer.cpp  mars_image_data_writer.hpp  mars_image_data_writer_settings.cpp  mars_mesh_io.cpp  mars_mesh_mpi_adios.cpp  mars_mesh_mpi_adios_time.cpp  mars_mesh_reader.cpp  mars_mesh_reader.hpp  mars_mesh_writer.hpp
backend/distributed/: CMakeLists.txt  mars_test_mpi.hpp
backend/vtk/: CMakeLists.txt  mars_vtk_IO.cpp  mars_vtk_IO.hpp
base/: CMakeLists.txt  mars_base.hpp  mars_benchmark.hpp  mars_communicator.cpp  mars_communicator.hpp  mars_config.hpp.in  mars_dof_map.hpp  mars_dual_graph.hpp  mars_edge.hpp  mars_edge_select.hpp  mars_edge_split_pool.hpp  mars_err.cpp  mars_err.hpp  mars_extract_surface.hpp  mars_fwd.hpp  mars_globals.hpp  mars_lepp_benchmark.hpp  mars_lepp_bisection.hpp  mars_longest_edge.hpp  mars_matrix.hpp  mars_mesh.hpp  mars_mesh_generation.hpp  mars_mesh_writer.hpp  mars_node_rank.hpp  mars_non_simplex.hpp  mars_oldest_edge.hpp  mars_par_bisection.hpp  mars_par_edge_split_pool.hpp  mars_par_mesh.hpp  mars_partitioned_bisection.hpp  mars_prelepp_benchmark.hpp  mars_prelepp_bisection.hpp  mars_quality.hpp  mars_ranked_edge.hpp  mars_red_green_refinement.hpp  mars_simplex.cpp  mars_simplex.hpp  mars_static_math.hpp  mars_stream.hpp  mars_test.cpp  (+3 more)
core/: CMakeLists.txt  mars.hpp  mars_env.cpp  mars_instance.cpp  mars_instance.hpp  mars_interfaces.hpp
distributed/: CMakeLists.txt  mars_distributed_base_data_management.hpp  mars_distributed_data_management.hpp  mars_distributed_dof.hpp  mars_distributed_dof_management.hpp  mars_distributed_fd_data_management.hpp  mars_distributed_fdstag_data_management.hpp  mars_distributed_finite_element.hpp  mars_distributed_foreign_dof_map.hpp  mars_distributed_mesh_generation.hpp  mars_distributed_mesh_management.hpp  mars_distributed_octant.hpp  mars_distributed_remote_dof_map.hpp  mars_distributed_sparsity_matrix.hpp  mars_distributed_sparsity_pattern.hpp  mars_distributed_staggered_data_management.hpp  mars_distributed_staggered_dof_management.hpp  mars_distributed_staggered_dof_map.hpp  mars_distributed_stencil.hpp  mars_distributed_user_data.hpp  mars_distributed_utils.hpp  mars_distributed_volume_data_management.hpp  mars_test_mpi.hpp
distributed/communication/: mars_context.hpp  mars_distributed_context.hpp  mars_dry_run_context.cpp  mars_execution_context.cpp  mars_execution_context.hpp  mars_gathered_vector.hpp  mars_mpi.cpp  mars_mpi.hpp  mars_mpi_context.cpp  mars_mpi_error.cpp
distributed/kokkos/: mars_distributed_mesh_kokkos.hpp  mars_distributed_non_simplex_kokkos.hpp  mars_distributed_simplex_kokkos.hpp
distributed/mars_env/: mars_mpi_guard.hpp
distributed/sfc/: mars_sfc_code.hpp  mars_sfc_generation.hpp
examples/: CMakeLists.txt  Image.hpp  Mandelbrot.hpp  Writer.hpp  mars_advection.hpp  mars_boundary_conditions.hpp  mars_copy_operator.hpp  mars_discretization.cpp  mars_example_adios2.cpp  mars_example_adios_mpi.cpp  mars_example_mpi.cpp  mars_example_post_install.cpp  mars_fe_simplex.hpp  mars_fe_values.hpp  mars_fedm_values.hpp  mars_fitzhugh_nagumo.hpp  mars_gradient_recovery.hpp  mars_image.hpp  mars_image_adios_writer.hpp  mars_image_data_writer.cpp  mars_image_data_writer.hpp  mars_image_data_writer_settings.cpp  mars_image_data_writer_settings.hpp  mars_laplace_ex.hpp  mars_mandelbrot.hpp  mars_matrix_free_operator.hpp  mars_mesh_io.cpp  mars_mesh_io.hpp  mars_mesh_mpi_adios.cpp  mars_mesh_mpi_adios_time.cpp  mars_mesh_reader.cpp  mars_mesh_reader.hpp  mars_mesh_writer.cpp  mars_mesh_writer.hpp  mars_mesh_writer_impl.hpp  mars_model_test.hpp  mars_poisson.hpp  mars_poisson_operator.cpp  mars_poisson_operator.hpp  mars_precon_conjugate_grad.hpp  (+13 more)
examples/cvfem/: CMakeLists.txt  README.md  test_deriv.cpp
examples/distributed/: mars_advection.hpp  mars_dm_interpolate.hpp  mars_matrix_free_operator.hpp  mars_poisson_operator.cpp  mars_quad4.hpp  mars_test.hpp
examples/distributed_dm/: mars_advection.hpp  mars_dm_interpolate.hpp  mars_example_adios2.cpp  mars_example_adios2.hpp  mars_fedm_values.hpp  mars_matrix_free_operator.hpp  mars_poisson.hpp  (+2 more)
io/: CMakeLists.txt  mars_io.cpp  mars_pvtu_writer.hpp  vtu_writer.hpp
kokkos/: CMakeLists.txt  mars_bisection_kokkos.hpp  mars_device_vector.hpp  mars_edge_element_map_kokkos.hpp  mars_edge_kokkos.hpp  mars_edge_node_map_kokkos.hpp  mars_edge_select_kokkos.hpp  mars_imesh_kokkos.hpp  mars_kokkos_generate_cube.hpp  mars_lepp_benchmark_kokkos.hpp  mars_longest_edge_kokkos.hpp  mars_mark_kokkos.hpp  mars_memory.hpp  mars_mesh_kokkos.hpp  mars_non_simplex_kokkos.hpp  mars_point.hpp  mars_simplex_kokkos.hpp  mars_static_math_kokkos.hpp  mars_sub_view.hpp  mars_test_kokkos.hpp  mars_utils_kokkos.hpp
moonolith_adapter/: CMakeLists.txt  mars_moonolith_function_space_adapter.hpp  mars_moonolith_l2_transfer.hpp  mars_moonolith_l2_transfer_test.cpp  mars_moonolith_l2_transfer_test.hpp  mars_moonolith_mesh_adapter.hpp  mars_moonolith_project_test.cpp  mars_moonolith_project_test.hpp  mars_moonolith_quadrature_test.cpp  mars_moonolith_quadrature_test.hpp  mars_moonolith_test.cpp  mars_moonolith_test.hpp
(+660 files in other folders)
